# klogic

./: .gitignore  CMakeLists.txt  README.md
debian/: changelog  control  copyright  klogic.links  klogic.sgml  menu  rules  watch
deviceIcons/: CMakeLists.txt
po/: de.gmo  es.gmo  fr.gmo  it.gmo  sv.gmo
src/: CMakeLists.txt  ClientWidget.h  InverterChooser.cpp  InverterChooser.h  KlogicGlobal.cpp  circuit.cpp  dlgEqu.cpp  dlgPattern.cpp  imageCache.cpp  klogic4.cpp  klogic4.h  main.cpp  oldHandler.cpp  propDev.cpp  propGlob.cpp  propOsz.cpp  propPwr.cpp  propSwitch.cpp  selection.cpp  wire.cpp
